[package]
name = "klask"
version = "1.0.0"
authors = ["Michał Gniadek <mgniadek@interia.pl>"]
edition = "2021"
license = "MIT"
description = "Automatically create GUI for clap apps"
repository = "https://github.com/MichalGniadek/klask"
categories = ["gui"]
keywords = ["clap", "gui", "ui", "cli", "egui"]

[dependencies]
cansi = "2.2.0"
clap = { version = "=4.1.14", default-features = false, features = [
    "std",
    "derive",
    "unicode",
    "deprecated",
    "error-context",
] }
eframe = { version = "0.18.0", default-features = false, features = [
    "default_fonts",
] }
heck = { version = "0.4.1", features = ["unicode"] } # Add unicode support to clap
linkify = "0.9.0"
rfd = "0.10.0"
thiserror = "1.0.35"
uuid = { version = "1", features = ["v4"] }
