[package]
name = "klask"
version = "1.0.0"
authors = ["Michał Gniadek <mgniadek@interia.pl>"]
edition = "2021"
license = "MIT"
description = "Automatically create GUI for clap apps"
repository = "https://github.com/MichalGniadek/klask"
categories = ["gui"]
keywords = ["clap", "gui", "ui", "cli", "egui"]

[dependencies]
cansi = "2"
clap = { version = "4", default-features = false, features = [
    "std",
    "derive",
    "unicode",
    "deprecated",
    "error-context",
] }
eframe = { version = "0.28" }
heck = { version = "0.4", features = ["unicode"] } # Add unicode support to clap
linkify = "0.10"
rfd = "0.14"
thiserror = "1.0.35"
uuid = { version = "1", features = ["v4"] }
